Some CSS3 filters tests crash under iOS testing https://bugs.webkit.org/show_bug.cgi?id=143594 rdar://problem/20491140

Reviewed by David Kilzer.

Some tests disable accelerated compositing via testRunner.overridePreference(). In this case,
we'd not create a root scrolling tree node, so null-check it in AsyncScrollingCoordinator::updateNonFastScrollableRegion().

* page/scrolling/AsyncScrollingCoordinator.cpp:
(WebCore::AsyncScrollingCoordinator::updateNonFastScrollableRegion):


Canonical link: https://commits.webkit.org/161619@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182621 268f45cc-cd09-0410-ab3c-d52691b4dbfc